update for html cheat sheet

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #dcdcdc;
+  font-family: Arial, sans-serif;
+}
+
+header {
+  width: 100vw;
+  text-align: center;
+  font-size: 33px;
+  padding: 0;
+  margin-top: 0.3em;
+  display: block;
+  font-weight: bold;
+}
+
+header h1 {
+  padding: 0;
+}
+
+.cheatsheet {
+  height: 30vh;
+  width: 100vw;
+}
+
+#cheatsheet-header {
+  font-size: 26px;
+  text-align: center;
+  margin-top: 0.8em;
+  color: #663399;
+  margin-bottom: 0.5em;
+}
+
+.main-content {
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+}
+
+#cheatsheet-table {
+  font-size: 18px;
+  border: 3px solid #9932cc;
+  width: 70vw;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: justify;
+}
+
+th {
+  background-color: #dda0dd;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#cheatsheet-table td {
+  border-top: 1.5px solid #9932cc;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.code-highlight {
+  background-color: #f5f5c7;
+  font-family: monospace;
 }
